restaurantController ve Routes oluşturuldu. Middleware oluşturuldu
